# grapheval

./: .gitignore  README  pyproject.toml
docs/: requirements.txt
docs/source/: cache.rst  conf.py  evalnode.rst  graph.rst  index.rst  nodefigure.rst
grapheval/: cache.py
