[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grapheval"
description = "Split an evaluation pipeline up for reproducible and easily editable code"
readme = "README"
license = { text = "GNU GPLv3" }
classifiers = [
    "License :: GPLv3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["physics", "data", "evaluation", "graph"]
dependencies = [
        "numpy",
        "astropy",
        "matplotlib"
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
graphplot = ["networkx"]
plot = ["proplot"]

[project.urls]
homepage = "https://github.com/pguenth/grapheval"

